Remove script injection vulnerability